LFLT-442 Update dependencies of Leaflet stack components  - Added Leaflet Stack Base BOM  - Updated tests  - CircleCI build plan updates